--- a/public/css/app/hosts.styl
+++ b/public/css/app/hosts.styl
@@ -82,3 +82,13 @@
     li.active
       border-color: highlight
       background-color: #050505
+
+@media (max-width: 768px)
+  .host-list
+    position: fixed
+    overflow-y: auto
+    top: 50px
+    left: 0
+    right: 0
+    height: 100%
+    margin: 0
